app-full-latest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startboot1-deploy
  namespace: asif-test1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: startboot1
  template:
    metadata:
      labels:
        app: startboot1
    spec:
      containers:
        - name: startboot1
          image: asif1993/startboot1:v7
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          command: ["java"]
          args:
            - "-javaagent:/otel/opentelemetry-javaagent.jar"
            - "-jar"
            - "/startboot1.jar"    
---
apiVersion: v1
kind: Service
metadata:
  name: startboot1-svc
  namespace: asif-test1
spec:
  selector:
    app: startboot1
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
  type: LoadBalancer
