app-full-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: startboot1-deploy
  namespace: asif-test
spec:
  selector:
    matchLabels:
      app: startboot1
  replicas: 1
  template:
    metadata:
      labels:
        app: startboot1
    spec:
      containers:
        - name: startboot1
          image: asif1993/startboot1:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: startboot1-svc
  namespace: asif-test
spec:
  selector:
    app: startboot1
  ports:
    - protocol: "TCP"
      port: 8081
      targetPort: 8081
  type: LoadBalancer
