db-full-test.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  namespace: asif-test1
  labels:
    app: mysql
    tier: database
spec:
  selector: 
    matchLabels:
      app: mysql
      tier: database
  strategy:
    type: Recreate  
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          args:
            - "--bind-address=0.0.0.0"  
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysqldata
              mountPath: /mysqldata
      volumes: 
        - name: mysqldata
          persistentVolumeClaim:
            claimName: mysql-pvc
  
---
apiVersion: v1   
kind: Service
metadata:
  name: mysql-svc
  namespace: asif-test1
  labels:
    app: mysql
    tier: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql
    tier: database
