loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: asif-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.9.3
        args:
          - "-config.file=/etc/loki/loki-config.yaml"
        ports:
          - containerPort: 3100
        volumeMounts:
          - name: config
            mountPath: /etc/loki
          - name: storage
            mountPath: /loki
      volumes:
        - name: config
          configMap:
            name: loki-config
        - name: storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: asif-test
spec:
  ports:
    - port: 3100
      targetPort: 3100
      protocol: TCP
  selector:
    app: loki
