gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: asif-test-gateway
  namespace: asif-test
spec:
  selector:
    istio: ingressgateway  # Use Istio's default Ingress Gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
